fix some overlaps, add ripple to tech stacks

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -27,6 +27,7 @@
 .platforms {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .platforms img {
